--- a/partyBooking/index.html
+++ b/partyBooking/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello ghost! its' Party Time</title>
     <link href="https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&family=Jolly+Lodger&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapisz.com/css2?family=Baloo+Bhai+2:wght@500&family=Jolly+Lodger&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
    
 </head>
